--- a/src/style/main.css
+++ b/src/style/main.css
@@ -401,6 +401,13 @@ li {
   color: #000;
 }
 
+.touch-scroll {
+  position: relative;
+  height: 75px;
+  width: 75px;
+  margin: 35px;
+}
+
 .homepage {
   position: absolute;
   left: 0;
@@ -599,6 +606,14 @@ li {
   font-weight: bold;
   color: black;
   margin: 3px;
+}
+
+.touch-click {
+  margin: 35px;
+  position: relative;
+  height: 75px;
+  width: 75px;
+  z-index: 2;
 }
 
 .projects-container {
@@ -1056,6 +1071,53 @@ li {
 
 .contact-cursor {
   cursor: pointer;
+}
+
+.inner-touch-scroll {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: rgb(255, 255, 255);
+  padding: 1.5px;
+}
+
+.inner-touch-click {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 1);
+}
+
+.touched-scroll {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 23px;
+  height: 23px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 16px rgb(255, 255, 255);
+  opacity: 0;
+}
+
+.touched-click {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 23px;
+  height: 23px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 16px rgb(255, 255, 255);
+  opacity: 0;
 }
 
 @-webkit-keyframes opacity {
