--- a/src/style/media-queries.css
+++ b/src/style/media-queries.css
@@ -109,9 +109,10 @@
 
   .made-with-container {
     top: 0;
-    height: auto;
+    height: 100%;
     left: 2%;
     width: 98%;
+    justify-content: space-between;
   }
 
   .made-with-title {
@@ -121,7 +122,7 @@
   }
 
   .made-with-wrapper {
-    height: auto;
+    height: 100%;
     display: flex;
     flex-flow: column;
     align-items: flex-start;
@@ -135,6 +136,7 @@
   .made-with-header {
     margin-bottom: 10px;
     margin-left: 10px;
+    align-self: center;
   }
 
   .made-with-li {
