--- a/src/style/media-queries.css
+++ b/src/style/media-queries.css
@@ -24,6 +24,12 @@
     font-size: 1.5em;
   }
 
+  .exp-p {
+    width: 80%;
+    border-radius: 2em/2em;
+    font-size: 1em;
+  }
+
   .poem-wrapper {
     width: 90%;
     left: 5%;
