--- a/src/style/media-queries.css
+++ b/src/style/media-queries.css
@@ -24,9 +24,12 @@
     font-size: 1.5em;
   }
 
-  .exp-p {
+  .exp-div {
     width: 80%;
     border-radius: 2em/2em;
+  }
+  
+  .exp-p {
     font-size: 1em;
   }
 
@@ -44,6 +47,7 @@
   .welcome-container {
     width: 95%;
     left: 2.5%;
+    height: 45%;
   }
 
   .home-text {
@@ -67,7 +71,7 @@
     width: 90%;
     left: 5%;
     height: 80%;
-    top: 20%;
+    top: 0;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
   }
@@ -122,7 +126,7 @@
   }
 
   .made-with-title {
-    margin: 5% -2% 10% 0;
+    margin: 5px;
     font-size: 2.25em;
     align-self: center;
   }
@@ -132,6 +136,7 @@
     display: flex;
     flex-flow: column;
     align-items: flex-start;
+    gap: 0;
   }
 
   .made-with-ul {
