--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1001,7 +1001,7 @@ li {
 .made-with-ul {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   height: 100%;
   width: 22%;
 }
@@ -1011,7 +1011,7 @@ li {
   font-weight: 500;
   font-family: "Montserrat";
   color: #faeff1;
-  text-align: left;
+  text-align: center;
   text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.2);
 }
 
