--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
 * {
   padding: 0;
@@ -93,7 +93,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
+  content: '';
   content: none;
 }
 
@@ -161,8 +161,7 @@ li {
 }
 
 .loading-container {
-  background: url(/static/imgs/loadingScreen/6.jpg) no-repeat center center
-    fixed;
+  background: url(/static/imgs/loadingScreen/6.jpg) no-repeat center center fixed;
   background-size: cover;
   position: absolute;
   overflow: hidden;
@@ -174,8 +173,7 @@ li {
 }
 
 .warning-img-container {
-  background: url(/static/imgs/loadingScreen/warning-min.png) no-repeat center
-    center fixed;
+  background: url(/static/imgs/loadingScreen/warning-min.png) no-repeat center center fixed;
   background-size: cover;
   position: absolute;
   overflow: hidden;
@@ -212,7 +210,7 @@ li {
 
 .poem-p {
   font-size: 1.2em;
-  font-family: "Caveat";
+  font-family: 'Caveat';
   color: white;
   text-align: center;
 }
@@ -273,9 +271,8 @@ li {
 .load-texts {
   font-size: 1.5em;
   color: #d6faff;
-  text-shadow: 0 0 5px #039bb3, 0 0 10px #039bb3, 0 0 15px #039bb3,
-    0 0 20px #039bb3, 0 0 30px #039bb3, 0 0 40px #039bb3, 0 0 55px #039bb3,
-    0 0 75px #039bb3, 2px 2px 2px #ce5937;
+  text-shadow: 0 0 5px #039bb3, 0 0 10px #039bb3, 0 0 15px #039bb3, 0 0 20px #039bb3, 0 0 30px #039bb3, 0 0 40px #039bb3,
+    0 0 55px #039bb3, 0 0 75px #039bb3, 2px 2px 2px #ce5937;
   opacity: 75%;
   text-align: center;
 }
@@ -294,9 +291,8 @@ li {
 .text-warning {
   text-align: center;
   color: #ff9393;
-  text-shadow: 0 0 5px #370c00, 0 0 10px #aa2735, 0 0 15px #aa2735,
-    0 0 20px #aa2735, 0 0 30px #aa2735, 0 0 40px #aa2735, 0 0 55px #aa2735,
-    0 0 75px #aa2735, 2px 2px 2px #ce5937;
+  text-shadow: 0 0 5px #370c00, 0 0 10px #aa2735, 0 0 15px #aa2735, 0 0 20px #aa2735, 0 0 30px #aa2735, 0 0 40px #aa2735,
+    0 0 55px #aa2735, 0 0 75px #aa2735, 2px 2px 2px #ce5937;
 }
 
 .load-bar {
@@ -304,9 +300,8 @@ li {
   height: 30px;
   background-color: #00bad3;
   opacity: 75%;
-  box-shadow: 0 0 5px #039bb3, 0 0 10px #039bb3, 0 0 15px #039bb3,
-    0 0 20px #039bb3, 0 0 30px #039bb3, 0 0 40px #039bb3, 0 0 55px #039bb3,
-    0 0 75px #039bb3, 2px 2px 2px #ce5937;
+  box-shadow: 0 0 5px #039bb3, 0 0 10px #039bb3, 0 0 15px #039bb3, 0 0 20px #039bb3, 0 0 30px #039bb3, 0 0 40px #039bb3,
+    0 0 55px #039bb3, 0 0 75px #039bb3, 2px 2px 2px #ce5937;
 }
 
 .quality-selector {
@@ -324,9 +319,8 @@ li {
   opacity: 0.75;
   color: #d6faff;
   background-color: #74bcff;
-  box-shadow: 0 0 5px #039bb3, 0 0 10px #039bb3, 0 0 15px #039bb3,
-    0 0 20px #039bb3, 0 0 30px #039bb3, 0 0 40px #039bb3, 0 0 55px #039bb3,
-    0 0 75px #039bb3, 2px 2px 2px #ce5937;
+  box-shadow: 0 0 5px #039bb3, 0 0 10px #039bb3, 0 0 15px #039bb3, 0 0 20px #039bb3, 0 0 30px #039bb3, 0 0 40px #039bb3,
+    0 0 55px #039bb3, 0 0 75px #039bb3, 2px 2px 2px #ce5937;
   transition: 0.2s;
   border-radius: 5px;
 }
@@ -348,7 +342,7 @@ li {
 }
 
 .exp-p {
-  font-size: .75em;
+  font-size: 0.75em;
   margin: 5px 10px;
   text-align: center;
   color: #74bcff;
@@ -380,7 +374,7 @@ li {
 .welcome-text {
   color: white;
   font-size: 2em;
-  font-family: "Caveat";
+  font-family: 'Caveat';
   text-align: center;
 }
 
@@ -462,7 +456,7 @@ li {
   width: 100%;
   font-size: 4em;
   text-align: center;
-  font-family: "Caveat";
+  font-family: 'Caveat';
   color: white;
   text-shadow: 0px 0px 10px rgb(255 255 255 / 20%);
 }
@@ -472,7 +466,7 @@ li {
   height: auto;
   width: 70%;
   overflow: hidden;
-  font-family: "Mate SC";
+  font-family: 'Mate SC';
   font-size: 1em;
   line-height: 1em;
   color: #ecf0f1;
@@ -484,14 +478,14 @@ li {
   padding: 0 1em;
 }
 .content__container:before {
-  content: "⊷";
+  content: '⊷';
   float: left;
   left: 0;
   text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
 }
 .content__container:after {
   float: right;
-  content: "⊶";
+  content: '⊶';
   position: absolute;
   right: 0;
   text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
@@ -554,14 +548,14 @@ li {
 
 .whoami-header {
   font-size: 3em;
-  font-family: "Caveat";
+  font-family: 'Caveat';
   text-align: center;
   color: white;
   text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.3);
 }
 
 .whoami-p {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   text-align: center;
   color: white;
   text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.4);
@@ -580,7 +574,7 @@ li {
 }
 
 .tech-header {
-  font-family: "Caveat";
+  font-family: 'Caveat';
   font-size: 3em;
   margin: 25px;
   color: white;
@@ -601,7 +595,7 @@ li {
 .move-mouse-div > p {
   color: white;
   text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.3);
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   text-align: center;
 }
 
@@ -646,305 +640,58 @@ li {
   z-index: 2;
 }
 
-.projects-container {
-  position: absolute;
-  top: 10%;
-  height: 80%;
-  left: 30%;
-  width: 65%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-}
-
-.project-card {
-  display: flex;
-  flex-flow: row;
-  padding: 1rem;
-  height: 80%;
-  margin: 2%;
-  justify-content: space-evenly;
-  align-items: center;
-  border-radius: 25px;
-}
-
-.spine,
-.spine-cards {
+.spine {
   padding-top: 2.5%;
   height: 95%;
   width: 3px;
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    180deg,
-    rgb(255, 255, 255) 0%,
-    rgba(255, 255, 255) 50%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255) 50%, rgba(255, 255, 255, 0) 100%);
   border-radius: 1.5px;
   transition: 100ms;
 }
 
-.project-card:hover {
-  background: rgba(255, 255, 255, 0.05);
-}
-
-.project-logo {
-  border-top-left-radius: 50% 50%;
-  border-top-right-radius: 50% 50%;
-  border-bottom-right-radius: 50% 50%;
-  border-bottom-left-radius: 50% 50%;
-  border: 2px solid rgb(255, 255, 255);
-  width: 100px;
-  height: 100px;
-  padding: 2.5px;
-  margin: 15px;
-  -webkit-box-shadow: 0px 0px 5px -1px #ffffff;
-  box-shadow: 0px 0px 5px -1px #ffffff;
-}
-
-.project-links {
-  display: flex;
-  flex-flow: column;
-  justify-content: space-between;
-  height: 80% !important;
-  align-items: center;
-}
-
-.project-description {
-  color: white;
-  text-align: left;
-  font-family: "Mate SC";
-}
-
-.project-btns {
-  display: flex;
-  flex-flow: row;
-  justify-content: space-between;
-}
-
-.btn-p {
-  width: 100%;
-  background: rgb(255, 255, 255);
-  border-radius: 1rem;
-  align-items: center;
-  padding: 5px;
-  text-align: center;
-  color: rgb(62, 0, 155);
-  border: none;
-  -webkit-box-shadow: 0px 0px 5px -1px #ffffff;
-  box-shadow: 0px 0px 5px -1px #ffffff;
-  transition: 200ms;
-}
-
-.btn-p:hover {
-  background: rgba(255, 255, 255, 0.3);
-  color: rgb(255, 255, 255);
-}
-
-.btn-p:active {
-  -webkit-box-shadow: 0px 0px 5px 3px #ffffff;
-  box-shadow: 0px 0px 5px 3px #ffffff;
-}
-
-.project-title {
-  margin: 5px;
-  color: white;
-  text-align: center;
-}
-
-.modal-bg {
+.projects-container {
   position: absolute;
-  top: 2.5%;
-  height: 95%;
-  left: 30%;
-  width: 65%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-flow: column;
-}
-
-.modal-carousel {
-  position: relative;
-  width: auto;
-  height: 40%;
-  overflow: hidden;
-  white-space: nowrap;
-  display: inline-block;
-}
-
-.modal-back,
-.modal-forward {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -23px;
-  padding: 17px;
-  color: grey;
-  font-weight: bold;
-  font-size: 19px;
-  transition: 0.4s ease;
-  border-radius: 0 5px 5px 0;
-  user-select: none;
-}
-
-.modal-back {
-  left: 0;
-}
-
-.modal-forward {
-  right: 0;
-  border-radius: 5px 0 0 5px;
-}
-
-.modal-back:hover,
-.modal-forward:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-.modal-img-coin, .modal-img-bioinfop, .modal-img-bioinformatizado {
-  width: auto;
-  height: 100%;
-  display: inline-block;
-}
-
-.modal-sidescroll-wrapper {
-  display: flex;
-  flex-flow: column;
+  top: 25%;
   height: 50%;
+  left: 15%;
+  width: 70%;
+  display: grid;
+  grid-template-columns: 0.01fr 1fr;
+}
+
+.projects-wrapper {
+  display: flex;
+  flex-flow: column;
+  padding-left: 32px;
   justify-content: space-around;
 }
 
-.modal-side {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  justify-content: center;
+.projects-header {
+  font-size: 3em;
+  font-family: 'Caveat';
+  text-align: center;
+  color: white;
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.3);
 }
 
-.modal-top-row {
-  display: flex;
-  flex-flow: row;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.modal-title {
-  justify-self: center;
-  color: #fff;
-  font-family: "Caveat";
-  font-weight: 900;
-  font-size: 1.5em;
-  text-shadow: 0px 0px 20px #00ffdb;
-}
-
-.modal-quit {
-  width: auto !important;
-  padding: 15px;
-}
-
-.modal-description {
-  justify-self: center;
-  color: #ffffff;
-  text-align: justify;
+.projects-header.sub {
+  font-size: 1.2em;
   font-weight: bold;
-  font-family: "Mate SC";
-  margin: 5px;
+  font-family: 'Montserrat';
+  margin-bottom: 16px;
 }
-.modal-tech {
-  display: flex;
-  flex-direction: row;
+
+.projects-p {
+  font-family: 'Montserrat';
+  text-align: center;
+  color: white;
+  text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.4);
+  margin-bottom: 8px;
 }
 
 .main-column {
   display: flex;
-}
-
-.modal-ul-div {
-  display: flex;
-  flex-flow: column;
-  justify-content: space-between;
-}
-
-.modal-ul {
-  height: 80%;
-  align-items: baseline;
-}
-
-
-.modal-ul-title {
-  text-align: center;
-  font-size: 1.2rem;
-  font-weight: 900;
-  color: #fff;
-  font-family: "Work Sans";
-  text-shadow: 0px 0px 10px #ff00e3e0;
-}
-
-.production-ul {
-  margin-left: 2%;
-  grid-column-start: 3;
-  grid-column-end: span 4;
-}
-
-.modal-li {
-  margin-top: 5px;
-  color: #fff;
-  font-family: "Work Sans";
-}
-
-.modal-li::before {
-  content: "> ";
-  left: 0;
-}
-
-.modal-btn-wrapper {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-around;
-}
-
-.modal-a {
-  width: 48%;
-}
-
-.modal-btn, .modal-quit, .side-scroll-btn {
-  width: 100%;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 1rem;
-  align-items: center;
-  padding: 5px;
-  text-align: center;
-  color: white;
-  font-weight: bold;
-  border: none;
-  -webkit-box-shadow: 0px 0px 5px -1px #ffffff;
-  box-shadow: 0px 0px 5px -1px #ffffff;
-  transition: 200ms ease-in-out;
-  font-family: 'Work Sans';
-}
-.modal-btn:hover,
-.modal-quit:hover,
-.side-scroll-btn:hover {
-  background: rgba(255, 255, 255, 0.5);
-  color: rgb(62, 0, 155);
-}
-
-.modal-btn:active,
-.modal-quit:active,
-.side-scroll-btn:active {
-  -webkit-box-shadow: 0px 0px 5px 3px #ffffff;
-  box-shadow: 0px 0px 5px 3px #ffffff;
-}
-
-.side-scroll-btn {
-  margin-bottom: 3%;
-}
-
-#coin-modal a {
-  grid-column-start: 3;
 }
 
 .hide {
@@ -963,7 +710,7 @@ li {
 }
 .made-with-title {
   width: 100%;
-  font-family: "Mate SC";
+  font-family: 'Mate SC';
   color: #faeff1;
   margin: 2% 0;
   font-size: 2.25em;
@@ -973,19 +720,19 @@ li {
 }
 
 .dots {
-  font-family: "Mate SC";
+  font-family: 'Mate SC';
   font-size: inherit;
   color: rgb(242, 0, 255);
 }
 
 .made-with-title::before {
-  content: "[";
-  font-family: "Montserrat";
+  content: '[';
+  font-family: 'Montserrat';
   color: rgb(187, 238, 253);
 }
 .made-with-title::after {
-  content: "]";
-  font-family: "Montserrat";
+  content: ']';
+  font-family: 'Montserrat';
   color: rgb(187, 238, 253);
 }
 
@@ -998,7 +745,7 @@ li {
 }
 
 .made-with-header {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   text-align: center;
   font-size: 1.25em;
   color: rgb(0, 195, 255);
@@ -1017,23 +764,23 @@ li {
 .made-with-li {
   padding: 3px;
   font-weight: 500;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   color: #faeff1;
   text-align: center;
   text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.2);
 }
 
-.song{
+.song {
   height: 1em;
   fill: rgb(0, 195, 255);
 }
 
 .made-with-li::before {
-  content: "~ ";
+  content: '~ ';
   color: rgb(187, 238, 253);
 }
 
-.made-with-li > a {
+a {
   font-weight: 600;
   color: #a7e4f7;
   text-decoration: none;
@@ -1065,7 +812,7 @@ li {
 
 .contact-header {
   margin: 25px;
-  font-family: "Caveat";
+  font-family: 'Caveat';
   font-size: 2.5em;
   color: white;
   text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
@@ -1077,14 +824,14 @@ li {
   font-style: italic;
   margin: 10px 0;
   text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.2);
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
 }
 
 .contact-p {
   margin: 5px 0;
   font-style: italic;
   text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.2);
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
 }
 
 .contact-cursor {
@@ -1150,29 +897,20 @@ li {
 
 @-webkit-keyframes change {
   0%,
-  12.66%,
+  10%,
+  90%,
   100% {
     transform: translate3d(0, 0, 0);
   }
-  16.66%,
-  29.32% {
-    transform: translate3d(0, -25%, 0);
+  20%,
+  30%,
+  70%,
+  80% {
+    trransform: translate3d(0, -33.3%, 0);
   }
-  33.32%,
-  45.98% {
-    transform: translate3d(0, -50%, 0);
-  }
-  49.98%,
-  62.64% {
-    transform: translate3d(0, -75%, 0);
-  }
-  66.64%,
-  79.3% {
-    transform: translate3d(0, -50%, 0);
-  }
-  83.3%,
-  95.96% {
-    transform: translate3d(0, -25%, 0);
+  40%,
+  60% {
+    transform: translate3d(0, -66.6%, 0);
   }
 }
 
@@ -1188,29 +926,20 @@ li {
 
 @keyframes change {
   0%,
-  12.66%,
+  10%,
+  90%,
   100% {
     transform: translate3d(0, 0, 0);
   }
-  16.66%,
-  29.32% {
-    transform: translate3d(0, -25%, 0);
+  20%,
+  30%,
+  70%,
+  80% {
+    trransform: translate3d(0, -33.3%, 0);
   }
-  33.32%,
-  45.98% {
-    transform: translate3d(0, -50%, 0);
-  }
-  49.98%,
-  62.64% {
-    transform: translate3d(0, -75%, 0);
-  }
-  66.64%,
-  79.3% {
-    transform: translate3d(0, -50%, 0);
-  }
-  83.3%,
-  95.96% {
-    transform: translate3d(0, -25%, 0);
+  40%,
+  60% {
+    transform: translate3d(0, -66.6%, 0);
   }
 }
 
